tests/ui/feature-gates/feature-gate-alloc-error-handler.stderr
error[E0658]: use of unstable library feature 'alloc_error_handler'
  --> $DIR/feature-gate-alloc-error-handler.rs:8:3
   |
LL | #[alloc_error_handler]
   |   ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #51540 <https://github.com/rust-lang/rust/issues/51540> for more information
   = help: add `#![feature(alloc_error_handler)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
